# testes_mlops

./: .gitignore  .pre-commit-config.yaml  BUNDLE_GUIDE.md  CI_CD_GUIDE.md  README.md  databricks.yml  project_config.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
notebooks/: 01_exploratory_data_analysis.py  02_data_processing.py  03_model_training.py  04_model_evaluation.py  05_model_deployment.py
resources/: batch_inference_job.yml  evaluation_job.yml  monitoring_job.yml  training_job.yml
src/: README.md
src/monitoring/: README.md
src/pipeline/: 01_process_data.py  02_train_model.py  03_evaluate_model.py  04_promote_model.py  05_monitor_drift.py  README.md
src/pipeline_batch_inference/: 01_load_new_data.py  02_preprocess.py  03_run_inference.py  04_save_predictions.py  05_save_metadata.py  README.md
src/utils/: README.md  data_utils.py  evaluation_utils.py  mlflow_utils.py  model_evaluation.py
tests/: __init__.py  test_data_processor.py  test_evaluation_utils.py  test_mlflow_utils.py
