[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teste-mlops"
version = "0.1.0"
description = "Pipeline MLOps para classificação Iris com CI/CD, retreino automático e monitoramento"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "mlflow>=2.8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "flake8>=6.0.0",
    "pre-commit>=3.5.0",
    "ipykernel>=6.25.0",
]

[project.scripts]
# Pipeline de Treino
process_data = "src.pipeline.01_process_data:cli_main"
train_model = "src.pipeline.02_train_model:cli_main"
evaluate_model = "src.pipeline.03_evaluate_model:cli_main"
promote_model = "src.pipeline.04_promote_model:cli_main"
monitor_drift = "src.pipeline.05_monitor_drift:cli_main"

# Pipeline de Batch Inference
batch_inference_load_data = "src.pipeline_batch_inference.01_load_new_data:main"
batch_inference_preprocess = "src.pipeline_batch_inference.02_preprocess:main"
batch_inference_predict = "src.pipeline_batch_inference.03_run_inference:main"
batch_inference_save = "src.pipeline_batch_inference.04_save_predictions:main"
batch_inference_metadata = "src.pipeline_batch_inference.05_save_metadata:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "B904",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
]
